[gd_scene load_steps=32 format=3 uid="uid://bn5nhkofewyh8"]

[ext_resource type="Theme" uid="uid://dotibkyt5mm7v" path="res://user-interface/menu/theme/menu.tres" id="1_tnrbu"]
[ext_resource type="Texture2D" uid="uid://bgh4r80tk5o7v" path="res://level/misty-lake/resource/water-noise.tres" id="2_57hu4"]
[ext_resource type="Script" uid="uid://ds3sdkcsc35br" path="res://user-interface/menu/settings/Generic.gd" id="2_dgpou"]
[ext_resource type="Script" uid="uid://56nrjlcalnjp" path="res://user-interface/menu/resource/Level.gd" id="2_hncmy"]
[ext_resource type="Shader" uid="uid://bvod4tn1td8xp" path="res://level/misty-lake/resource/water.gdshader" id="2_hrrn6"]
[ext_resource type="Script" uid="uid://babve1x63io4j" path="res://user-interface/resource/custom-node/SFXButton.gd" id="3_wn432"]
[ext_resource type="Script" uid="uid://d1qrfkqcqeko3" path="res://user-interface/resource/custom-node/FormatLabel.gd" id="4_h21eu"]
[ext_resource type="PackedScene" uid="uid://bsf3tthvg8rot" path="res://user-interface/menu/settings/reset.tscn" id="5_nrino"]
[ext_resource type="Script" uid="uid://3d0fhbr2j165" path="res://user-interface/resource/custom-node/SFXToggler.gd" id="5_vnfn8"]
[ext_resource type="Script" uid="uid://clrdv7mp1bmlj" path="res://user-interface/menu/settings/audio.gd" id="6_8l51l"]
[ext_resource type="PackedScene" uid="uid://bmsj0mdtehnxx" path="res://user-interface/local-score.tscn" id="6_46wtg"]
[ext_resource type="Script" uid="uid://irsnl0hpdmch" path="res://user-interface/resource/custom-node/PercentageSlider.gd" id="8_b5jhj"]
[ext_resource type="Texture2D" uid="uid://cu2ufhkx3vayf" path="res://entity/player/reimu/resource/ofuda.png" id="9_f05ce"]
[ext_resource type="PackedScene" uid="uid://slgj8m4hrglh" path="res://entity/player/reimu/orb-barrel.tscn" id="10_bh3vs"]
[ext_resource type="PackedScene" uid="uid://ffnff8ahyxxn" path="res://entity/player/reimu/reimu-sprite.tscn" id="10_dtu3c"]
[ext_resource type="Shape2D" uid="uid://8v0qid6h0jl5" path="res://entity/player/reimu/resource/ofuda.tres" id="11_poxet"]
[ext_resource type="Material" uid="uid://c5frc6pfgn8xs" path="res://singleton/item-manager/bullet-monochrome.material" id="11_wt44o"]
[ext_resource type="PackedScene" uid="uid://cw6ldgxnk6nf3" path="res://entity/player/marisa/marisa-sprite.tscn" id="12_3ecnw"]
[ext_resource type="Script" uid="uid://cabsvy5kchsr0" path="res://user-interface/menu/character/character.gd" id="13_rskvb"]
[ext_resource type="PackedScene" uid="uid://ecqcoejg1lj8" path="res://entity/player/marisa/beam.tscn" id="14_7sa2c"]
[ext_resource type="Shortcut" uid="uid://xs30oatyn1i6" path="res://user-interface/resource/shortcut/enter.tres" id="14_nwuco"]
[ext_resource type="Script" uid="uid://c3n8s2ytwd8c2" path="res://user-interface/resource/custom-node/PercentageSliderNormalized.gd" id="18_5vp8w"]
[ext_resource type="Script" uid="uid://bvpk10xko55xu" path="res://user-interface/menu/settings/controls.gd" id="24_hwgke"]
[ext_resource type="Script" uid="uid://cycs0or5gxuo6" path="res://user-interface/menu/settings/graphic.gd" id="30_jysfy"]
[ext_resource type="Script" uid="uid://ddbbg1oyx4qto" path="res://user-interface/menu/resource/ConnectionNotifier.gd" id="34_wrdal"]

[sub_resource type="Gradient" id="Gradient_a3m1y"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.282609, 1)
colors = PackedColorArray(0.91, 0.3276, 0.3276, 1, 0.4, 1, 0.95, 1, 0.1105, 0.16445, 0.65, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_snijx"]
gradient = SubResource("Gradient_a3m1y")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_26hbj"]
resource_local_to_scene = true
shader = ExtResource("2_hrrn6")
shader_parameter/wave_velocity = Vector2(0, 2)
shader_parameter/wave_distortion = 0.2
shader_parameter/wave_multipler = -7.0
shader_parameter/water_velocity = Vector2(0, -0.2)
shader_parameter/color_map = SubResource("GradientTexture1D_snijx")

[sub_resource type="Gradient" id="Gradient_42y17"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.804348, 1)
colors = PackedColorArray(0, 0.0733334, 0.22, 1, 0.1105, 0.2184, 0.65, 1, 0.529667, 0.17, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qxer6"]
gradient = SubResource("Gradient_42y17")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6wu2"]
shader = ExtResource("2_hrrn6")
shader_parameter/wave_velocity = Vector2(0, 2)
shader_parameter/wave_distortion = 0.2
shader_parameter/wave_multipler = -7.0
shader_parameter/water_velocity = Vector2(0, -0.2)
shader_parameter/color_map = SubResource("GradientTexture1D_qxer6")

[node name="Menu" type="VBoxContainer"]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(270, 480)
theme = ExtResource("1_tnrbu")

[node name="background" type="TabContainer" parent="."]
z_index = -1000
layout_mode = 2
size_flags_vertical = 0
current_tab = 0
clip_tabs = false
tabs_visible = false

[node name="Mistylake" type="Control" parent="background"]
layout_mode = 2
metadata/_tab_index = 0

[node name="background" type="Sprite2D" parent="background/Mistylake"]
texture_repeat = 2
material = SubResource("ShaderMaterial_26hbj")
texture = ExtResource("2_57hu4")
centered = false

[node name="MistylakeHARD" type="Control" parent="background"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="background" type="Sprite2D" parent="background/MistylakeHARD"]
texture_repeat = 2
material = SubResource("ShaderMaterial_g6wu2")
texture = ExtResource("2_57hu4")
centered = false

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="play" type="TabContainer" parent="TabContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
current_tab = 2
metadata/_tab_index = 0

[node name="Level" type="VBoxContainer" parent="TabContainer/play"]
visible = false
layout_mode = 2
script = ExtResource("2_hncmy")
metadata/_tab_index = 0

[node name="Preview" type="TabContainer" parent="TabContainer/play/Level"]
z_index = -900
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="MistyLake" type="Control" parent="TabContainer/play/Level/Preview"]
layout_mode = 2
metadata/level = &"res://level/misty-lake/misty-lake.tscn"
metadata/_tab_index = 0

[node name="MistyLake-hard" type="Control" parent="TabContainer/play/Level/Preview"]
visible = false
layout_mode = 2
metadata/level = &"res://level/misty-lake/hard/misty-lake-hard.tscn"
metadata/_tab_index = 1

[node name="LevelList" type="OptionButton" parent="TabContainer/play/Level"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Misty Lake"
popup/item_0/id = 0
popup/item_1/text = "Misty Lake Hard"
popup/item_1/id = 1

[node name="LeftRightButton" type="HBoxContainer" parent="TabContainer/play/Level"]
layout_mode = 2
size_flags_vertical = 3

[node name="previous" type="Button" parent="TabContainer/play/Level/LeftRightButton"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "<"
flat = true
alignment = 0
script = ExtResource("3_wn432")
press_sfx = false

[node name="next" type="Button" parent="TabContainer/play/Level/LeftRightButton"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = ">"
flat = true
alignment = 2
script = ExtResource("3_wn432")

[node name="enter" type="Button" parent="TabContainer/play/Level"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
shortcut = ExtResource("14_nwuco")
text = "Start g@me"
script = ExtResource("3_wn432")

[node name="Score" type="TabContainer" parent="TabContainer/play"]
visible = false
layout_mode = 2
tab_alignment = 2
current_tab = 0
metadata/_tab_index = 1

[node name="Local" parent="TabContainer/play/Score" instance=ExtResource("6_46wtg")]
layout_mode = 2

[node name="Internet" type="VBoxContainer" parent="TabContainer/play/Score"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Character" type="VBoxContainer" parent="TabContainer/play"]
layout_mode = 2
script = ExtResource("13_rskvb")
metadata/_tab_index = 2

[node name="Preview" type="TabContainer" parent="TabContainer/play/Character"]
z_index = -1
texture_filter = 1
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="Reimu" type="Control" parent="TabContainer/play/Character/Preview"]
layout_mode = 2
metadata/path = &"res://entity/player/reimu/reimu.tscn"
metadata/_tab_index = 0

[node name="ReimuSprite" parent="TabContainer/play/Character/Preview/Reimu" instance=ExtResource("10_dtu3c")]
position = Vector2(270, 718)

[node name="Timer" type="Timer" parent="TabContainer/play/Character/Preview/Reimu/ReimuSprite"]
wait_time = 0.2
autostart = true

[node name="barrel" type="Node2D" parent="TabContainer/play/Character/Preview/Reimu/ReimuSprite"]

[node name="Marker2D" type="Marker2D" parent="TabContainer/play/Character/Preview/Reimu/ReimuSprite/barrel" groups=["Reimu Barrel"]]
position = Vector2(13.0002, -39.9999)
rotation = -1.5708
gizmo_extents = 51.7

[node name="Position2D2" type="Marker2D" parent="TabContainer/play/Character/Preview/Reimu/ReimuSprite/barrel" groups=["Reimu Barrel"]]
position = Vector2(-13, -40)
rotation = -1.5708
gizmo_extents = 82.9

[node name="BarrelRotator" parent="TabContainer/play/Character/Preview/Reimu/ReimuSprite/barrel" instance=ExtResource("10_bh3vs")]
rotation = 361.287

[node name="bullet" type="Bullet" parent="TabContainer/play/Character/Preview/Reimu/ReimuSprite" groups=["Bullet Manager"]]
speed = 572.0
barrel_group = &"Reimu Barrel"
hitbox = ExtResource("11_poxet")
texture = ExtResource("9_f05ce")
grazable = false
local_rotation = true
top_level = true
z_index = -5
material = ExtResource("11_wt44o")

[node name="Marisa" type="Control" parent="TabContainer/play/Character/Preview"]
visible = false
layout_mode = 2
metadata/path = &"res://entity/player/marisa/marisa.tscn"
metadata/_tab_index = 1

[node name="marisa" parent="TabContainer/play/Character/Preview/Marisa" instance=ExtResource("12_3ecnw")]
position = Vector2(270, 741)

[node name="Beam" parent="TabContainer/play/Character/Preview/Marisa/marisa" instance=ExtResource("14_7sa2c")]
show_behind_parent = true

[node name="title" type="OptionButton" parent="TabContainer/play/Character"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Reimu Hakurei"
popup/item_0/id = 0
popup/item_1/text = "Marisa Kirisame"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/play/Character"]
layout_mode = 2
size_flags_vertical = 3

[node name="previous" type="Button" parent="TabContainer/play/Character/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"
flat = true
alignment = 0

[node name="next" type="Button" parent="TabContainer/play/Character/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"
flat = true
alignment = 2

[node name="Settings" type="TabContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
current_tab = 1
metadata/_tab_index = 1

[node name="Game" type="VBoxContainer" parent="TabContainer/Settings"]
visible = false
layout_mode = 2
script = ExtResource("2_dgpou")
metadata/_tab_index = 0

[node name="SpeedLabel" type="Label" parent="TabContainer/Settings/Game"]
layout_mode = 2
text = "Game Speed: %d %%"
script = ExtResource("4_h21eu")

[node name="speed" type="HSlider" parent="TabContainer/Settings/Game" node_paths=PackedStringArray("label")]
layout_mode = 2
min_value = 0.25
max_value = 1.0
step = 0.0
value = 1.0
script = ExtResource("18_5vp8w")
label = NodePath("../SpeedLabel")

[node name="language" type="OptionButton" parent="TabContainer/Settings/Game"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Language: English"
popup/item_0/id = 0

[node name="UserName" type="LineEdit" parent="TabContainer/Settings/Game"]
layout_mode = 2
placeholder_text = "User Name"

[node name="reset" parent="TabContainer/Settings/Game" instance=ExtResource("5_nrino")]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="TabContainer/Settings"]
layout_mode = 2
script = ExtResource("24_hwgke")
metadata/_tab_index = 1

[node name="SentivityLabel" type="Label" parent="TabContainer/Settings/Controls"]
layout_mode = 2
size_flags_horizontal = 4
text = "Input sentivity : %d %%"
script = ExtResource("4_h21eu")

[node name="sentivity" type="HSlider" parent="TabContainer/Settings/Controls" node_paths=PackedStringArray("label")]
layout_mode = 2
focus_mode = 0
min_value = 0.1
max_value = 2.0
step = 0.01
value = 2.0
allow_greater = true
tick_count = 20
ticks_on_borders = true
script = ExtResource("18_5vp8w")
label = NodePath("../SentivityLabel")

[node name="raw" type="CheckButton" parent="TabContainer/Settings/Controls"]
layout_mode = 2
focus_mode = 0
text = "Raw Input"
script = ExtResource("5_vnfn8")

[node name="reset" parent="TabContainer/Settings/Controls" instance=ExtResource("5_nrino")]
layout_mode = 2
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_previous = NodePath("")

[node name="Audio" type="VBoxContainer" parent="TabContainer/Settings"]
visible = false
layout_mode = 2
script = ExtResource("6_8l51l")
metadata/_tab_index = 2

[node name="MasterLabel" type="Label" parent="TabContainer/Settings/Audio"]
layout_mode = 2
size_flags_horizontal = 4
text = "Master: %d %%"
script = ExtResource("4_h21eu")

[node name="master" type="HSlider" parent="TabContainer/Settings/Audio" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_vertical = 1
min_value = -60.0
max_value = 0.0
step = 0.0
allow_greater = true
tick_count = 10
script = ExtResource("8_b5jhj")
label = NodePath("../MasterLabel")

[node name="BgmLabel" type="Label" parent="TabContainer/Settings/Audio"]
layout_mode = 2
size_flags_horizontal = 4
text = "Music: %d %%"
script = ExtResource("4_h21eu")

[node name="bgm" type="HSlider" parent="TabContainer/Settings/Audio" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_vertical = 1
min_value = -60.0
max_value = 0.0
step = 0.0
allow_greater = true
tick_count = 10
script = ExtResource("8_b5jhj")
label = NodePath("../BgmLabel")

[node name="SfxLabel" type="Label" parent="TabContainer/Settings/Audio"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../master")
focus_neighbor_top = NodePath("../master")
focus_previous = NodePath("../master")
text = "Sound Effect: %d %%"
script = ExtResource("4_h21eu")

[node name="sfx" type="HSlider" parent="TabContainer/Settings/Audio" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -60.0
max_value = 0.0
step = 0.0
tick_count = 10
script = ExtResource("8_b5jhj")
label = NodePath("../SfxLabel")

[node name="micLabel" type="Label" parent="TabContainer/Settings/Audio"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../master")
focus_neighbor_top = NodePath("../master")
focus_previous = NodePath("../master")
text = "Microphone: %d %%"
script = ExtResource("4_h21eu")

[node name="mic" type="HSlider" parent="TabContainer/Settings/Audio" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -60.0
max_value = 0.0
step = 0.0
tick_count = 10
script = ExtResource("8_b5jhj")
label = NodePath("../micLabel")

[node name="voiceLabel" type="Label" parent="TabContainer/Settings/Audio"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../master")
focus_neighbor_top = NodePath("../master")
focus_previous = NodePath("../master")
text = "Voice: %d %%"
script = ExtResource("4_h21eu")

[node name="voice" type="HSlider" parent="TabContainer/Settings/Audio" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -60.0
max_value = 0.0
step = 0.0
tick_count = 10
script = ExtResource("8_b5jhj")
label = NodePath("../voiceLabel")

[node name="reset" parent="TabContainer/Settings/Audio" instance=ExtResource("5_nrino")]
layout_mode = 2

[node name="Graphic" type="VBoxContainer" parent="TabContainer/Settings"]
visible = false
layout_mode = 2
script = ExtResource("30_jysfy")
metadata/_tab_index = 3

[node name="ParticlesLabel" type="Label" parent="TabContainer/Settings/Graphic"]
layout_mode = 2
size_flags_horizontal = 4
text = "Particles: %d %%"
script = ExtResource("4_h21eu")

[node name="Particles" type="HSlider" parent="TabContainer/Settings/Graphic" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_vertical = 1
min_value = 0.25
max_value = 1.0
step = 0.25
value = 1.0
tick_count = 4
script = ExtResource("18_5vp8w")
label = NodePath("../ParticlesLabel")

[node name="EffectLevel" type="OptionButton" parent="TabContainer/Settings/Graphic"]
layout_mode = 2
selected = 3
item_count = 4
popup/item_0/text = "Disable Background"
popup/item_0/id = 0
popup/item_1/text = "Simple Background"
popup/item_1/id = 1
popup/item_2/text = "Disable Advanced Graphic Effect"
popup/item_2/id = 2
popup/item_3/text = "Graphic Level Maxium"
popup/item_3/id = 3

[node name="reset" parent="TabContainer/Settings/Graphic" instance=ExtResource("5_nrino")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "This game uses Godot Engine, available under the following license:

Copyright (c) 2014-present Godot Engine contributors.
Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE."

[node name="TabBar" type="TabBar" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
current_tab = 0
scrolling_enabled = false
select_with_rmb = true
tab_count = 3
tab_0/title = "Play"
tab_1/title = "Settings"
tab_2/title = "About"

[node name="ConnectionNotifier" type="AcceptDialog" parent="."]
disable_3d = true
transparent_bg = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
initial_position = 2
size = Vector2i(421, 141)
borderless = true
always_on_top = true
transparent = true
dialog_text = "Lost connection with your friend."
script = ExtResource("34_wrdal")

[connection signal="item_selected" from="TabContainer/play/Level/LevelList" to="TabContainer/play/Level" method="_on_level_list_item_selected"]
[connection signal="pressed" from="TabContainer/play/Level/LeftRightButton/previous" to="TabContainer/play/Level" method="select_level" binds= [false]]
[connection signal="pressed" from="TabContainer/play/Level/LeftRightButton/next" to="TabContainer/play/Level" method="select_level" binds= [true]]
[connection signal="pressed" from="TabContainer/play/Level/enter" to="TabContainer/play/Level" method="_on_enter_pressed" flags=6]
[connection signal="timeout" from="TabContainer/play/Character/Preview/Reimu/ReimuSprite/Timer" to="TabContainer/play/Character/Preview/Reimu/ReimuSprite/bullet" method="spawn_bullet"]
[connection signal="visibility_changed" from="TabContainer/play/Character/Preview/Reimu/ReimuSprite/barrel/BarrelRotator" to="TabContainer/play/Character/Preview/Reimu/ReimuSprite/barrel/BarrelRotator" method="_visibility_changed"]
[connection signal="item_selected" from="TabContainer/play/Character/title" to="TabContainer/play/Character" method="_on_title_item_selected"]
[connection signal="pressed" from="TabContainer/play/Character/HBoxContainer/previous" to="TabContainer/play/Character" method="_change_character" binds= [false]]
[connection signal="pressed" from="TabContainer/play/Character/HBoxContainer/next" to="TabContainer/play/Character" method="_change_character" binds= [true]]
[connection signal="pressed" from="TabContainer/Settings/Game/reset" to="TabContainer/Settings/Game" method="_on_reset_pressed"]
[connection signal="pressed" from="TabContainer/Settings/Controls/reset" to="TabContainer/Settings/Controls" method="_on_reset_pressed"]
[connection signal="value_changed" from="TabContainer/Settings/Audio/master" to="TabContainer/Settings/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="TabContainer/Settings/Audio/bgm" to="TabContainer/Settings/Audio" method="_on_bgm_value_changed"]
[connection signal="value_changed" from="TabContainer/Settings/Audio/sfx" to="TabContainer/Settings/Audio" method="_on_sfx_value_changed"]
[connection signal="value_changed" from="TabContainer/Settings/Audio/mic" to="TabContainer/Settings/Audio" method="_on_mic_value_changed"]
[connection signal="value_changed" from="TabContainer/Settings/Audio/voice" to="TabContainer/Settings/Audio" method="_on_voice_value_changed"]
[connection signal="pressed" from="TabContainer/Settings/Audio/reset" to="TabContainer/Settings/Audio" method="_on_reset_pressed"]
[connection signal="pressed" from="TabContainer/Settings/Graphic/reset" to="TabContainer/Settings/Graphic" method="_on_reset_pressed"]
[connection signal="tab_changed" from="TabBar" to="TabContainer" method="set_current_tab"]
